--- a/backend/.env
+++ b/backend/.env
@@ -2,14 +2,14 @@
 NODE_ENV=development
 
 # Database Configuration Development
-DB_USER=postgres
-DB_PASSWORD=123
-DB_HOST=localhost
-DB_PORT=5432
-DB_DATABASE=pembayaranSPP
+DB_USER=
+DB_PASSWORD=
+DB_HOST=
+DB_PORT=
+DB_DATABASE=
 
 # Database production
-DATABASE_URL=postgresql://admin_db:AdminDB%2301%21@localhost:5432/db_dynamic 
+DATABASE_URL=
 
 # PORT Server Configuration
 PORT=4000
@@ -19,14 +19,14 @@ SCREET_KEY = 81058c2556e63efff30ecca103541365
 EXPIRED_TOKEN = 7200
 
 # Email SMTP server Configuration
-EMAIL_SERVICE_NAME = smtp
-EMAIL_SERVICE_HOST = mail.digierp.id
-EMAIL_SERVICE_SECURE = false
-EMAIL_SERVICE_TLS = true
+EMAIL_SERVICE_NAME = 
+EMAIL_SERVICE_HOST = 
+EMAIL_SERVICE_SECURE = 
+EMAIL_SERVICE_TLS = 
 EMAIL_SERVICE_PORT = 587
-EMAIL_USER_NAME = noreply-dynamic@sigma.my.id
-EMAIL_USER_PASSWORD = xjqh758a
+EMAIL_USER_NAME = 
+EMAIL_USER_PASSWORD = 
 
 # URL
-URL_MIS = https://mis.telkomsigma.co.id/
+URL_MIS = 
 BASE_URL = https://officetopdf.freeat.me
